--- a/resources/sass/_style.scss
+++ b/resources/sass/_style.scss
@@ -23,3 +23,11 @@
   background-color: #ffffff;
   border: 1px solid #e5e5e5;
 }
+
+.form-business {
+  background-color: #fff;
+  padding: 20px;
+  border: 1px solid #e5e5e5;
+  border-radius: 5px;
+  box-shadow: 0px 5px 5px #e5e5e5;
+}
