--- a/resources/sass/_style.scss
+++ b/resources/sass/_style.scss
@@ -1,10 +1,3 @@
-
-.form-login {
-  background-color: $gray-300;
-  border: 1px solid darken($gray-300, 10);
-  border-radius: 10px;
-}
-
 .form {
   display: none;
   position: absolute;
@@ -24,7 +17,8 @@
   border: 1px solid #e5e5e5;
 }
 
-.form-business {
+.form-business, .form-login  {
+  position: relative;
   background-color: #fff;
   padding: 20px;
   border: 1px solid #e5e5e5;
