--- a/resources/sass/_style.scss
+++ b/resources/sass/_style.scss
@@ -1,13 +1,13 @@
 .form {
-  display: none;
-  position: absolute;
+  /* display: none; */
+  /* position: absolute; */
   padding: 20px;
   background-color: #ffffff;
   border: 1px solid #e5e5e5;
   border-radius: 8px;
-  -webkit-box-shadow:  0px 5px 4px #9a9a9a;
-  -moz-box-shadow:  0px 5px 4px #9a9a9a;
-  box-shadow:  0px 5px 4px #9a9a9a;
+  -webkit-box-shadow: 0px 5px 4px #9a9a9a;
+  -moz-box-shadow: 0px 5px 4px #9a9a9a;
+  box-shadow: 0px 5px 4px #9a9a9a;
 }
 
 .file {
@@ -17,11 +17,20 @@
   border: 1px solid #e5e5e5;
 }
 
-.form-business, .form-login  {
+.form-offer, .form-business, .form-login {
   position: relative;
   background-color: #fff;
   padding: 20px;
   border: 1px solid #e5e5e5;
   border-radius: 5px;
   box-shadow: 0px 5px 5px #e5e5e5;
+}
+
+.form-search {
+  padding: 10px;
+  background-color: #e5e5e5;
+  .form-group {
+    margin: 0px;
+    padding: 0px;
+  }
 }
