--- a/resources/sass/_style.scss
+++ b/resources/sass/_style.scss
@@ -16,7 +16,10 @@
   background-color: #ffffff;
   border: 1px solid #e5e5e5;
 }
-
+.offers-file {
+  border-radius: 5px;
+  box-shadow: 0px 5px 5px #e5e5e5;
+}
 .form-offer, .form-business, .form-login {
   position: relative;
   background-color: #fff;
@@ -33,4 +36,8 @@
     margin: 0px;
     padding: 0px;
   }
+}
+
+.date {
+  font-size: 0.85rem;
 }
