--- a/resources/sass/_style.scss
+++ b/resources/sass/_style.scss
@@ -7,7 +7,7 @@
   border-radius: 8px;
   -webkit-box-shadow: 0px 5px 4px #9a9a9a;
   -moz-box-shadow: 0px 5px 4px #9a9a9a;
-  box-shadow: 0px 5px 4px #9a9a9a;
+  box-shadow: 0px 5px 4px #797979;
 }
 
 .file {
@@ -26,18 +26,19 @@
   padding: 20px;
   border: 1px solid #e5e5e5;
   border-radius: 5px;
-  box-shadow: 0px 5px 5px #e5e5e5;
+  box-shadow: 0px 5px 5px #797979;
 }
 
-.form-search {
-  padding: 10px;
-  background-color: #e5e5e5;
-  .form-group {
-    margin: 0px;
-    padding: 0px;
-  }
-}
 
 .date {
   font-size: 0.85rem;
+}
+body {
+  background-color: $white;
+}
+footer {
+  background: {
+    color: #323D7E;
+  }
+  padding: 20px 0px;
 }
